--- a/index.html
+++ b/index.html
@@ -166,13 +166,14 @@
 
         #task-form {
             display: grid;
-            grid-template-columns: 1fr auto;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 15px;
             margin-bottom: 30px;
             align-items: center;
         }
 
         #task-form input[type="text"] {
+            grid-column: 1 / -1;
             padding: 14px 16px;
             border: 1px solid var(--border-color);
             border-radius: 12px;
@@ -435,6 +436,10 @@
                 <label for="task-deadline-input">Deadline:</label>
                 <input type="date" id="task-deadline-input" required>
             </div>
+            <div class="date-picker">
+                <label for="task-finish-date-input">Finished:</label>
+                <input type="date" id="task-finish-date-input">
+            </div>
             <button type="submit">Add Task</button>
         </form>
         
@@ -450,6 +455,7 @@
             const taskForm = document.getElementById('task-form');
             const taskNameInput = document.getElementById('task-name-input');
             const taskDeadlineInput = document.getElementById('task-deadline-input');
+            const taskFinishDateInput = document.getElementById('task-finish-date-input');
             const taskList = document.getElementById('task-list');
             const timerElement = document.getElementById('timer');
             const timerDateElement = document.getElementById('timer-date');
@@ -542,6 +548,7 @@
 
                 const taskName = taskNameInput.value.trim();
                 const deadline = taskDeadlineInput.value;
+                const finishDate = taskFinishDateInput.value;
 
                 if (taskName === '' || deadline === '') {
                     showNotification('Task name and deadline are required.');
@@ -554,12 +561,24 @@
                     return;
                 }
 
+                if (finishDate) {
+                    const finishDateObj = new Date(finishDate);
+                    if (isNaN(finishDateObj.getTime())) {
+                        showNotification('The finish date you entered is not valid.');
+                        return;
+                    }
+                    if (finishDateObj > deadlineDate) {
+                        showNotification('Finish date cannot be after the deadline.');
+                        return;
+                    }
+                }
+
                 const task = {
                     id: Date.now(),
                     name: taskName,
                     deadline: deadline,
-                    isCompleted: false,
-                    finishDate: null
+                    isCompleted: !!finishDate,
+                    finishDate: finishDate || null,
                 };
 
                 addTaskToDOM(task);
