--- a/index.html
+++ b/index.html
@@ -268,29 +268,34 @@
             cursor: pointer;
             font-size: 1rem;
             font-weight: 600;
-            transition: transform 0.2s, box-shadow 0.2s, background-color 0.2s;
+            transition: transform 0.2s, box-shadow 0.2s, background-color 0.2s, opacity 0.2s;
         }
         
+        .button:disabled {
+            cursor: not-allowed;
+            opacity: 0.6;
+        }
+
         .button.green { background-color: var(--success-color); }
         .button.orange { background-color: var(--warning-color); }
         .button.red { background-color: var(--danger-color); }
 
-        .button:hover, #task-form button:hover {
+        .button:hover:not(:disabled), #task-form button:hover:not(:disabled) {
             transform: translateY(-2px);
             box-shadow: 0 6px 20px var(--shadow-color);
         }
 
-        .button.green:hover {
+        .button.green:hover:not(:disabled) {
              box-shadow: 0 6px 20px rgba(52, 199, 89, 0.3);
              background-color: #30b852;
         }
         
-        .button.orange:hover {
+        .button.orange:hover:not(:disabled) {
              box-shadow: 0 6px 20px rgba(255, 149, 0, 0.3);
              background-color: #ff8c00;
         }
 
-        .button.red:hover {
+        .button.red:hover:not(:disabled) {
             box-shadow: 0 6px 20px rgba(255, 59, 48, 0.3);
             background-color: #e02b21;
         }
@@ -1363,4 +1368,5 @@
     </script>
 </body>
 </html>
+"remove the file transfer button, and add a setting button, that can let user change the theme of the website, user can also choose the background image from unsplash, and change the font of the text."
 
