--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         #todo-view-wrapper input:checked + .slider:before { transform: translateX(24px); }
         
         #timer-container {
-            text-align: center; margin-bottom: 30px;margin-top:20px; background-color: var(--timer-bg-color); padding: 15px 20px;
+            text-align: center; margin-bottom: 30px;margin-top:20px; background-color: var(--timer-bg-color); padding: 15px 20px;padding-top: 20px;
             border-radius: 12px; border: 1px solid #333; box-shadow: 0 4px 10px rgba(0,0,0,0.2), inset 0 0 5px rgba(0,0,0,0.5);
             transition: background-color 0.3s;
         }
