--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard | To-Do & Schedule</title>
+    <title>To-Do</title>
     
     <!-- Google Fonts for a modern look (used by both apps) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -233,7 +233,7 @@
         #received-files-list { list-style-type: none; padding: 0; margin: 0; }
         #received-files-list li { background-color: var(--input-bg-color); padding: 10px 15px; border-radius: 8px; display: flex; justify-content: space-between; align-items: center; margin-bottom: 8px; font-size: 0.9rem; }
         #received-files-list .download-link { text-decoration: none; color: white; background-color: var(--primary-color); padding: 5px 10px; border-radius: 6px; font-weight: 500; font-size: 0.85rem; }
-        
+        #tt{ color: var(--text-color);}
         /* --- Calendar View Styles --- */
         .view-switcher { display: flex; justify-content: center; gap: 10px; margin-bottom: 20px; }
         .view-switcher button { padding: 8px 16px; font-size: 0.9rem; font-weight: 600; border-radius: 10px; border: 1px solid var(--border-color); background-color: transparent; color: var(--text-light-color); cursor: pointer; transition: background-color 0.2s, color 0.2s; }
@@ -509,8 +509,8 @@
         <div id="schedule-view-wrapper" style="display: none;">
             <div class="container mx-auto p-4 max-w-5xl">
                 <header class="text-center mb-8">
-                    <h1 class="text-4xl font-bold text-gray-800">School Schedule</h1>
-                    <p id="schedule-subtitle" class="text-gray-500 mt-2">Loading your schedule...</p>
+                    <h1 class="text-4xl font-bold text-gray-800" id="tt">Timetable</h1>
+                    <p id="schedule-subtitle" class="text-gray-500 mt-2">Loading the timetable...</p>
                 </header>
                 <main class="grid grid-cols-1 md:grid-cols-2 gap-8">
                     <div class="bg-white p-6 rounded-xl shadow-lg border border-gray-200">
