--- a/index.html
+++ b/index.html
@@ -1509,7 +1509,7 @@
                         return;
                     }
                     classTimetableData = data[userClass];
-                    scheduleSubtitle.textContent = `Showing schedule for class ${userClass}.`;
+                    scheduleSubtitle.textContent = `Showing Timetable for class ${userClass}.`;
                     
                     // *** REMOVED: const allEvents = parseCSV(csvData); ***
                     // We now use the global ALL_SCHOOL_EVENTS
