--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
             flex-direction: column; 
             width: 100%;
             /* --- MODIFICATION: Set max-width and center calendar --- */
-            max-width: 550px;
-            margin: 0 auto;
+            max-width: 80％;
+            margin: 0;
         }
         #calendar-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; }
         #calendar-header h2 { font-size: 1.5rem; font-weight: 700; margin: 0; }
