--- a/index.html
+++ b/index.html
@@ -618,8 +618,8 @@
 2025-10-27,Monday,E,,"S6 First Examination; S1-3 Test Week"
 2025-10-28,Tuesday,F,,"S6 First Examination; S1-3 Test Week"
 2025-10-29,Wednesday,,School Holiday,"S6 First Examination; S1-3 Test Week; Chung Yeung Festival"
-2025-10-30,Thursday,,,"S6 First Examination; S1-3 Test Week"
-2E-10-31,Friday,H,,"S6 First Examination; S1-3 Test Week"
+2025-10-30,Thursday,G,,"S6 First Examination; S1-3 Test Week"
+2025-10-31,Friday,H,,"S6 First Examination; S1-3 Test Week"
 2025-11-01,Saturday,,,
 2025-11-02,Sunday,,,
 2025-11-03,Monday,B,,"S6 First Examination"
