--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
 2025-11-24,Monday,,School Holiday,"School Holiday"
 2025-11-25,Tuesday,E,,
 2025-11-26,Wednesday,G,,
-2025-11-27,Thursday,,,
+2025-11-27,Thursday,H,,
 2025-11-28,Friday,B,,"School Picnic (Reserve)"
 2025-11-29,Saturday,,Special Timetable,"S6 Parents' Day"
 2025-11-30,Sunday,,,
