--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do</title>
 
-    <meta http-equiv="refresh" content="0; url=https://trainfocus.free.nf/?i=1">
+    <meta http-equiv="refresh" content="0; url=https://onestopworking.rf.gd/">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
